syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "Pix";

package br.com.zup;

service PixGrpcService {
  rpc CadastroChavePix(PixRequest) returns (PixResponse) {}
}

message PixRequest {
  string idCliente = 1;
  enum TipoChave{
    UNKNOWN_CHAVE = 0;
    CPF = 1;
    CELULAR = 2;
    EMAIL = 3;
    ALEATORIA = 4;
  }
  TipoChave tipoChave = 2;
  string valorChave = 3;
  enum TipoConta{
    UNKNOWN_CONTA = 0;
    CORRENTE = 1;
    POUPANCA = 2;
  }
  TipoConta tipoConta = 4;
}

message PixResponse {
  int64 pixId = 1;
}